--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="корги, каталог, купить корги, собаки">
+  <meta name="description" content="Каталог наших корги с описаниями и фотографиями.">
   <title>{{title}}</title>
-  {{> partials/scripts-styles}}
+  {{> script-styles}}
 </head>
 <body>
-{{> partials/header}}
+{{> header}}
 
 <main>
   {{{body}}}
 </main>
 
-{{> partials/footer}}
+{{> footer}}
 </body>
 </html>
