--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -1,29 +1,23 @@
-{{#*inline "title"}}Магазин корги - Главная{{/inline}}
-
-{{#*inline "content"}}
-  <section id="index">
-    <h2>О нашем питомнике</h2>
-    <p>Мы занимаемся <strong>профессиональным разведением</strong> корги уже более 10 лет...</p>
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="../../public/pages/img1/puppy_for_about1.png" alt="Small Photo 1">
-        </div>
-        <div class="swiper-slide">
-          <img src="../../public/pages/img1/puppy_for_about.jpg" alt="Small Photo 2">
-        </div>
-        <div class="swiper-slide">
-          <img src="../../public/pages/img1/happy_new_year.jpg" alt="New Year Puppy">
-        </div>
-        <div class="swiper-slide">
-          <img src="../../public/pages/img1/hollywood.jpg" alt="Hollywood Puppy">
-        </div>
-      </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+<section id="index">
+  <h2>О нашем питомнике</h2>
+  <p>Мы занимаемся <strong>профессиональным разведением</strong> корги уже более 10 лет...</p>
+</section>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="../../public/pages/img1/puppy_for_about1.png" alt="Small Photo 1"> <!-- Исправлен путь -->
     </div>
-  </section>
-{{/inline}}
-
-{{> layouts/main}}
+    <div class="swiper-slide">
+      <img src="../../public/pages/img1/puppy_for_about.jpg" alt="Small Photo 2">
+    </div>
+    <div class="swiper-slide">
+      <img src="../../public/pages/img1/happy_new_year.jpg" alt="New Year Puppy">
+    </div>
+    <div class="swiper-slide">
+      <img src="../../public/pages/img1/hollywood.jpg" alt="Hollywood Puppy">
+    </div>
+  </div>
+  <div class="swiper-pagination"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+</div>
