--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -2,22 +2,23 @@
   <h2>О нашем питомнике</h2>
   <p>Мы занимаемся <strong>профессиональным разведением</strong> корги уже более 10 лет...</p>
 </section>
-<div class="swiper-container">
-  <div class="swiper-wrapper">
-    <div class="swiper-slide">
-      <img src="../../public/pages/img1/puppy_for_about1.png" alt="Small Photo 1"> <!-- Исправлен путь -->
-    </div>
-    <div class="swiper-slide">
-      <img src="../../public/pages/img1/puppy_for_about.jpg" alt="Small Photo 2">
-    </div>
-    <div class="swiper-slide">
-      <img src="../../public/pages/img1/happy_new_year.jpg" alt="New Year Puppy">
-    </div>
-    <div class="swiper-slide">
-      <img src="../../public/pages/img1/hollywood.jpg" alt="Hollywood Puppy">
-    </div>
+<div class="splide" aria-label="Галерея фотографий">
+  <div class="splide__track">
+    <ul class="splide__list">
+      <li class="splide__slide">
+        <img src="../../public/pages/img1/puppy_for_about1.png" alt="Small Photo 1">
+      </li>
+      <li class="splide__slide">
+        <img src="../../public/pages/img1/puppy_for_about.jpg" alt="Small Photo 2">
+      </li>
+      <li class="splide__slide">
+        <img src="../../public/pages/img1/happy_new_year.jpg" alt="New Year Puppy">
+      </li>
+      <li class="splide__slide">
+        <img src="../../public/pages/img1/hollywood.jpg" alt="Hollywood Puppy">
+      </li>
+    </ul>
   </div>
-  <div class="swiper-pagination"></div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
+  <div class="splide__arrows"></div>
+  <div class="splide__pagination"></div>
 </div>
