--- a/views/partials/script-styles.hbs
+++ b/views/partials/script-styles.hbs
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="../../public/style.css">
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js" defer></script>
 <script src="../../public/js/main.js" defer></script>
