--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,5 +6,8 @@
             <a href="моб:+71234567890">+7 (123) 456-78-90</a>
         </span>
   </div>
-  {{> menu active=activePage}}
+  {{> menu activePage=activePage menu=menu}}
+  <div>
+    &nbsp
+  </div>
 </header>
