--- a/views/partials/script-styles.hbs
+++ b/views/partials/script-styles.hbs
@@ -2,3 +2,4 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js" defer></script>
 <script src="../../public/js/main.js" defer></script>
+<script src="../../public/js/constructor.js" defer></script>
