feature: added auth logic

--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -1,6 +1,7 @@
 <section id="index">
   <h2>О нашем питомнике</h2>
-  <p>Мы занимаемся <strong>профессиональным разведением</strong> корги уже более 10 лет...</p>
+  <p>Мы занимаемся <strong>профессиональным разведением</strong> корги уже более 10 лет. Наши собаки обладают
+    всеми необходимыми <em>сертификатами здоровья</em> и наградами с выставок.</p>
 </section>
 <div class="splide" aria-label="Галерея фотографий">
   <div class="splide__track">
