--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,13 +1,22 @@
 <header>
-  <img src="../../public/pages/img1/logo.png" alt="logo" width="187" class="cite_logo">
-  <h1 class="cute_head">Площадка продажи корги</h1>
-  <div>
-        <span>Москва, ул. Лапушкина, д.5 | Телефон:
-            <a href="моб:+71234567890">+7 (123) 456-78-90</a>
-        </span>
+  <div class="header-main">
+    <img src="../../public/pages/img1/logo.png" alt="logo" width="187" class="cite_logo">
+    <div class="header-title-section">
+      <h1 class="cute_head">Площадка продажи корги</h1>
+    </div>
+    {{#if isAuthenticated}}
+      <a href="/logout" class="logout-btn">Выйти</a>
+    {{else}}
+      <a href="/login" class="auth-button">Войти</a>
+      <a href="/register" class="auth-button">Регистрация</a>
+    {{/if}}
   </div>
+
+  <div class="contacts">
+    <span>Москва, ул. Лапушкина, д.5 | Телефон:
+      <a href="моб:+71234567890">+7 (123) 456-78-90</a>
+    </span>
+  </div>
+
   {{> menu activePage=activePage menu=menu}}
-  <div>
-    &nbsp
-  </div>
 </header>
