--- a/views/pages/login.hbs
+++ b/views/pages/login.hbs
@@ -1,6 +1,7 @@
 <section id="login">
   <h2>Вход</h2>
-  <form action="/login" method="post">
+  <div id="error-message" class="error-message" style="display: none;"></div>
+  <form action="/login" method="post" id="login-form">
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
