--- a/views/partials/script-styles.hbs
+++ b/views/partials/script-styles.hbs
@@ -3,3 +3,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js" defer></script>
 <script src="../../public/js/main.js" defer></script>
 <script src="../../public/js/constructor.js" defer></script>
+<script src="../../public/js/register.js" defer></script>
+<script src="../../public/js/login.js" defer></script>
